# metascalp-sdk

./: .gitignore  LICENSE  README.md
.github/workflows/: publish.yml
docs/: MetaScalp-Api.md  index.html
dotnet/MetaScalp.Sdk/: MetaScalp.Sdk.csproj  MetaScalpClient.cs  MetaScalpSocket.cs  Models.cs
dotnet/MetaScalp.Sdk.Examples/: MetaScalp.Sdk.Examples.csproj  Program.cs
js/: package.json  tsconfig.json
js/examples/: basic-rest.ts  live-trades.ts  orderbook-stream.ts
js/src/: client.ts  index.ts  socket.ts  types.ts
nupkg/: MetaScalp.Sdk.1.0.5.nupkg
python/: pyproject.toml  setup.py
python/examples/: basic_rest.py  live_trades.py
python/metascalp/: __init__.py  client.py  socket.py
