[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metascalp"
version = "1.0.4"
description = "Official SDK for MetaScalp API — trade, stream order book and trades via REST and WebSocket"
readme = "../README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "MetaScalp"}]
keywords = ["metascalp", "trading", "api", "websocket", "orderbook", "crypto", "market-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "aiohttp>=3.8",
    "websockets>=11.0",
]

[project.urls]
Homepage = "https://metascalp.io"
Repository = "https://github.com/MetaScalp/metascalp-sdk"

[tool.setuptools.packages.find]
include = ["metascalp*"]
